implement books view